# collatz

./: pyproject.toml
collatz/: __main__.py  sequence.py  utils.py
