[tool.poetry]
name = "collatz"
version = "0.1.0"
description = "A Collatz hypothesis tester"
authors = ["Daniil Novoselov <gudnmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = "^5.6.4"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
collatz = "collatz.__main__:main"
